# AEGIS

./: .gitignore  README.md  REQUIREMENTS.md  api.md  api_response.json  build_errors.txt  build_errors_2.txt  build_log.txt  build_output.txt  clean_build_log.txt  dummy_test_data.csv  err.txt  inject.py  package-lock.json  package.json  pyproject.toml  rough.txt  run_build.py  settings.gradle.kts
app/: build.gradle.kts  main.py
app/api/: deps.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  audit.py  enums.py  honeytoken.py  playbook.py  playbook_log.py  setting.py  threat.py  user.py
app/schemas/: auth.py  dashboard.py  honeytoken.py  playbook.py  settings.py  threat.py
app/services/: action_handlers.py  ai_service.py  audit_service.py  metrics_service.py  playbook_service.py  threat_service.py
app/streaming/: sse.py
backend/: attacker_flood.py  config.py  get_real_samples.py  requirements.txt  sample_ddos.json  sample_portscan.json  server.py  simulate_traffic.py  test_predict.py  test_shap.py  train.py
backend/data/: preprocess.py
backend/evaluation/: evaluate.py
backend/models/: baseline.py  classifier.py  explainer.py  threat_dna.py
demo/: attacker.py  flood_receiver.py  host_sensor.py  ml_threat_receiver.py  target_app.py
docs/: ai_analysis.md  honeytokens.md  playbook_actions.md  playbook_architecture.md
gradle/: libs.versions.toml
scripts/: create-tables.js
src/: middleware.ts
src/app/: globals.css  (+2 more)
storage/: av_scan_queue.txt  firewall_blocklist.txt  quarantine_list.txt  tier2_escalations.txt
(+70 files in other folders)
