[project]
name = "aegis-backend"
version = "0.1.0"
description = "AEGIS backend control plane"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.41",
  "pydantic-settings>=2.10.1",
  "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "httpx>=0.28.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
